--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/portfolio.css">
     <title>Document</title>
 </head>
 <body>
     <a href="html/index.html"></a>
+    <script src="js/portfolio.js"></script>
 </body>
 </html>
