--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,4 +10,4 @@
     <h1>hello from the first page </h1>
     <script src="../js/portfolio.js"></script>
 </body>
-</html>
+</html> -->
