--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="html/index.html"></a>
+        <h1>hello from the first page </h1>
     <script src="js/portfolio.js"></script>
 </body>
 </html>
