--- a/index.html
+++ b/index.html
@@ -6,26 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/portfolio.css">
 </head>
 
 <body>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
-                content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="#">Ahmed Taha Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-link" href="files/CV.pdf" target="_blank">My CV</a>
+                    <a class="nav-link" href="files/CV.pdf" download>Download CV</a>
+                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Pricing</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- My Info Section -->
+    <div class="container my-5">
+        <div class="row align-items-center text-center text-md-start">
+            <!-- Profile Image -->
+            <div class="col-12 col-md-5 mb-4 mb-md-0 d-flex justify-content-center">
+                <img src="images/profile.jpg" alt="Profile" id="profileimg" class="img-fluid rounded-circle shadow">
+            </div>
+
+            <!-- Brief -->
+            <div class="col-12 col-md-7">
+                <h1 class="fw-bold">Ahmed Taha</h1>
+                <h3 class="text-primary">Full Stack Web Developer</h3>
+                <p class="mt-3 fs-5">
+                    I am a motivated Full Stack Web Developer with solid skills in building responsive and dynamic web
+                    applications. My expertise covers both front-end technologies
+                    (<strong>HTML, CSS, JavaScript, Bootstrap, Angular</strong>) and back-end development using
+                    <strong>PHP</strong>.
+                </p>
+            </div>
         </div>
     </div>
-    <h1>hello from the first page </h1>
+
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
     <script src="js/portfolio.js"></script>
-
 </body>
 
 </html>
