Add contact section to index.html with email, phone, and WhatsApp details; enhance portfolio.css for styling

--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
                 </p>
             </div>
         </div>
+        <section id="contact" class="contact-section">
+            <div class="container">
+                <h2>Contact Us</h2>
+                <p>For any inquiries, you can reach us via:</p>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <strong>📧 Email:</strong> <a href="mailto:ahmed185taha@gmail.com">ahmed185taha@gmail.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <strong>📞 Phone:</strong> <a href="tel:+201063675209">+20 106 367 5209</a>
+                    </div>
+                    <div class="contact-item">
+                        <strong>💬 WhatsApp:</strong> <a href="https://wa.me/201063675209">+20 106 367 5209</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <!-- Scripts -->
