--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <section id="contact" class="contact-section">
-            <div class="container">
+            <div class="container-fluid">
                 <h2>Contact Us</h2>
                 <p>For any inquiries, you can reach us via:</p>
                 <div class="contact-info">
