Enhance CSS for improved responsiveness and styling; update profile image in index.html for better loading performance

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row align-items-center text-center text-md-start">
             <!-- Profile Image -->
             <div class="col-12 col-md-5 mb-4 mb-md-0 d-flex justify-content-center">
-                <img src="images/profile.jpg" alt="Profile" id="profileimg" class="img-fluid rounded-circle shadow">
+                <img src="images/profile.jpg" alt="Profile" id="profileimg" class="img-fluid rounded-circle shadow mx-auto mx-md-0" loading="lazy" decoding="async">
             </div>
 
             <!-- Brief -->
