--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link" href="files/CV.pdf" target="_blank">My CV</a>
-                    <a class="nav-link" href="files/CV.pdf" download>Download CV</a>
+                    <a class="nav-link" href="Ahmed_Taha_CV1.pdf" target="_blank">My CV</a>
+                    <a class="nav-link" href="Ahmed_Taha_CV1.pdf" download>Download CV</a>
                     <a class="nav-link" href="#">Features</a>
                     <a class="nav-link" href="#">Pricing</a>
                 </div>
@@ -36,7 +36,8 @@
         <div class="row align-items-center text-center text-md-start">
             <!-- Profile Image -->
             <div class="col-12 col-md-5 mb-4 mb-md-0 d-flex justify-content-center">
-                <img src="images/profile.jpg" alt="Profile" id="profileimg" class="img-fluid rounded-circle shadow mx-auto mx-md-0" loading="lazy" decoding="async">
+                <img src="images/profile.jpg" alt="Profile" id="profileimg"
+                    class="img-fluid rounded-circle shadow mx-auto mx-md-0" loading="lazy" decoding="async">
             </div>
 
             <!-- Brief -->
@@ -51,24 +52,27 @@
                 </p>
             </div>
         </div>
-        <section id="contact" class="contact-section">
-            <div class="container-fluid">
-                <h2>Contact Us</h2>
-                <p>For any inquiries, you can reach us via:</p>
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <strong>📧 Email:</strong> <a href="mailto:ahmed185taha@gmail.com">ahmed185taha@gmail.com</a>
-                    </div>
-                    <div class="contact-item">
-                        <strong>📞 Phone:</strong> <a href="tel:+201063675209">+20 106 367 5209</a>
-                    </div>
-                    <div class="contact-item">
-                        <strong>💬 WhatsApp:</strong> <a href="https://wa.me/201063675209">+20 106 367 5209</a>
-                    </div>
+        
+    </div>
+    
+    <!-- contact info -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>For any inquiries, you can reach us via:</p>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <strong>📧 Email:</strong> <a href="mailto:ahmed185taha@gmail.com">ahmed185taha@gmail.com</a>
+                </div>
+                <div class="contact-item">
+                    <strong>📞 Phone:</strong> <a href="tel:+201063675209">+20 106 367 5209</a>
+                </div>
+                <div class="contact-item">
+                    <strong>💬 WhatsApp:</strong> <a href="https://wa.me/201063675209">+20 106 367 5209</a>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
