Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="Ahmed_Taha_CV1.pdf" target="_blank">My CV</a>
                     <a class="nav-link" href="Ahmed_Taha_CV1.pdf" download>Download CV</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#project">projects</a>
+                    <a class="nav-link" href="#contact">contact me</a>
                 </div>
             </div>
         </div>
@@ -52,9 +52,58 @@
                 </p>
             </div>
         </div>
-        
+
     </div>
-    
+
+    <div id="project" class="projects container my-5">
+        <h2 class="text-center mb-4">My Projects</h2>
+        <div class="row">
+            <!-- Card 1 -->
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="images/pr1.png" class="card-img-top img-fluid" alt="Project 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Project Title 1</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional
+                            content.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="images/pr2.png" class="card-img-top img-fluid" alt="Project 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Project Title 2</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional
+                            content.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 10 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="images/pr3.png" class="card-img-top img-fluid" alt="Project 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Project Title 3</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 20 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- contact info -->
     <section id="contact" class="contact-section">
         <div class="container">
